added img (*4) for isometric/3D effect on the hover event

--- a/style.css
+++ b/style.css
@@ -16,3 +16,9 @@ body {
     transform: rotate(-30deg) skew(25deg) scale(0.7);
     transition: 0.5s;
 }
+
+.container img {
+    position: absolute;
+    width: 100%;
+    transition: 0.5s;
+}
