--- a/style.css
+++ b/style.css
@@ -22,3 +22,13 @@ body {
     width: 100%;
     transition: 0.5s;
 }
+
+.container:hover img:nth-child(4) {
+    transform: translate(160px, -160px);
+    opacity: 1;
+}
+/* 
+.container:hover img:nth-child(3) {
+    transform: translate(120px, -120px);
+    opacity: 1;
+} */
