--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     position: relative;
     width: 360px;
     height: 640px;
-    background: rgba(0, 0, 0, 1.0);
+    background: rgba(0, 0, 0, 0.1);
     transform: rotate(-30deg) skew(25deg) scale(0.7);
     transition: 0.5s;
 }
@@ -27,8 +27,18 @@ body {
     transform: translate(160px, -160px);
     opacity: 1;
 }
-/* 
+
 .container:hover img:nth-child(3) {
     transform: translate(120px, -120px);
-    opacity: 1;
-} */
+    opacity: 0.8;
+}
+
+.container:hover img:nth-child(2) {
+    transform: translate(80px, -80px);
+    opacity: 0.6;
+}
+
+.container:hover img:nth-child(1) {
+    transform: translate(40px, -40px);
+    opacity: 0.4;
+}
