--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@ body {
 
 .container {
     position: relative;
-    width: 360px;
-    height: 640px;
-    background: rgba(0, 0, 0, 0.1);
+    width: 300px;
+    height: 300px;
+    /* background: rgba(0, 0, 0, 0.1); */
     transform: rotate(-30deg) skew(25deg) scale(0.7);
     transition: 0.5s;
 }
@@ -23,19 +23,24 @@ body {
     transition: 0.5s;
 }
 
+.container:hover img:nth-child(5) {
+    transform: translate(200px, -200px);
+    opacity: 1;
+}
+
 .container:hover img:nth-child(4) {
     transform: translate(160px, -160px);
-    opacity: 1;
+    opacity: 0.8;
 }
 
 .container:hover img:nth-child(3) {
     transform: translate(120px, -120px);
-    opacity: 0.8;
+    opacity: 0.6;
 }
 
 .container:hover img:nth-child(2) {
     transform: translate(80px, -80px);
-    opacity: 0.6;
+    opacity: 0.4;
 }
 
 .container:hover img:nth-child(1) {
